theme, gif, plotly added to session 2 ggplot

--- a/session2_ggplot/materiel/ggplot_session.Rmd
+++ b/session2_ggplot/materiel/ggplot_session.Rmd
@@ -25,13 +25,13 @@ Il s'agit d'une expérience de phénotypage de plantes d'*Arabidopsis thaliana* 
 - A 12°C ou à 22°C
 - Avec une température constante ou qui fluctue dans la journée
 - Avec une période de 8h de jour ou de 16h de jour par cycle de 24h
-- Avec un traitement de froid qui immite l'hiver (vernalisation)
+- Avec un traitement de froid qui imite l'hiver (vernalisation)
 
 Des plantes de différents génotypes ont été analysées: des mutants et sauvages et des écotypes différents.
 
 Pour chaque plante dans chaque condition plusieurs phénotypes ont été mesurés (voir illustration ci-dessous pour mieux comprendre les termes):
 
-- Le nombre de jour pour que la tige (qui contient les fleurs) emmerge: _days to bolt_
+- Le nombre de jour pour que la tige (qui contient les fleurs) émerge: _days to bolt_
 - Le nombre de jour pour que la première fleur s'ouvre: _days to flower_
 - Le nombre de feuilles dans la rosette à la fin de l'expérience: _rosette leaf num_
 - Le nombre de feuilles caulines à la fin de l’expérience: _cauline leaf num_
@@ -78,7 +78,7 @@ library(plotly)
 Vous devez aussi vous assurer que le répertoire de travail de R est bien le dossier qui contient le matériel de la formation. Le chemin vers ce dossier va être différent en fonction de votre système opérateur.   
 Pour spécifier le répertoire de travail de R utilisez la fonction ``setwd()``:
 
-``` {r}
+``` {r, eval = FALSE}
 setwd("~/Desktop/2021_L3_R/session2_ggplot/materiel")
 ```
 
@@ -205,7 +205,7 @@ Nous allons utiliser le package R `ggplot2`, qui utilise le principe de "grammar
 - aesthetics
 - objet géométrique (type de graphique)
 - transformations statistiques
-- ajustements positionels
+- ajustements positionnels
 - faceting
 
 Les trois premières briques sont essentielles: data, aesthetics et objet géométrique. 
@@ -391,6 +391,166 @@ En conclusion, **il est possible de représenter de nombreuses informations en c
 >
 >**Indice**: facet le graphique avec `day.length` et `temperature` et colorer l'intérieur des boxplot en fonction de `fluctuation`.
 
+# Pour aller plus loin
+
+## Changer l'apparence d'un graphique en utilisant les thèmes
+
+
+Tous les éléments d'un ggplot sont modifiables. Les **thèmes** permettent de modifier l'apparence du graphique. Voici quelques exemples. 
+
+
+
+```{r warning = FALSE}
+# Example de thèmes existants dans ggplot2 
+ggplot(expt1, aes(genotype, days.to.flower)) +
+  geom_boxplot() +
+  theme_bw() +
+  labs(title = "Black and white theme")
+
+ggplot(expt1, aes(genotype, days.to.flower)) +
+  geom_boxplot() +
+  theme_classic() +
+  labs(title = "Classic theme")
+
+ggplot(expt1, aes(genotype, days.to.flower)) +
+  geom_boxplot() +
+  theme_minimal() +
+  labs(title = "Minimal theme")
+```
+
+
+La fonction `theme()` peut être utilisée pour modifier des éléments en particulier du graphique. Il y a tellement de possibilités que le mieux est de rechercher sur internet la modification que vous voulez faire.  
+
+
+Par exemple, en recherchant "vertical labels x axis ggplot2" nous obtenons [cette solution](https://stackoverflow.com/questions/1330989/rotating-and-spacing-axis-labels-in-ggplot2): 
+
+```{r warning = FALSE}
+ggplot(expt1, aes(genotype, days.to.flower)) +
+  geom_boxplot() +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+```
+
+Rechercher "altering plot colours ggplot2" donne 
+[ceci](http://www.sthda.com/english/wiki/ggplot2-colors-how-to-change-colors-automatically-and-manually), qui apporte cette solution:
+
+```{r warning = FALSE}
+ggplot(expt1, aes(genotype, days.to.flower, fill = fluctuation)) +
+  geom_boxplot() +
+  scale_fill_brewer(palette="Dark2")
+```
+
+
+## Combiner plusieurs graphiques dans une même figure
+
+Parfois nous voulons crée une figure contenant plusieurs graphiques, c'est le cas dans la plupart des articles scientifiques.
+
+Par exemple le graphique que vous avez reproduit hier correspond aux panels B et C d'une figure de [Burghard et al 2015](https://nph.onlinelibrary.wiley.com/doi/full/10.1111/nph.13799)
+
+![](https://nph.onlinelibrary.wiley.com/cms/asset/73c17ba2-4706-41b2-8dfd-cbe3ac8405dd/nph13799-fig-0002-m.jpg){width=60%}
+
+
+Nous allons faire quelque chose de similaire avec un scatterplot en panel A, et des boxplots en panel B.
+
+Pour cela nous allons utiliser la fonction `ggarrange()` qui est dans le package `ggpubr`.
+
+Tout d'abord, nous devons charger cette librairie dans R:
+
+
+```{r}
+library(ggpubr)
+```
+
+
+Ensuite, faisons chaque graphique indépendamment et sauvons les dans un objet:
+
+- Un scatterplot montrant la relation entre le nombre de feuilles et le nombre de jours jusqu’à floraison, coloré en fonction du traitement: 
+
+
+```{r}
+panelA <- ggplot(expt1, aes(rosette.leaf.num, days.to.bolt, colour = fluctuation)) +
+    geom_point() 
+```
+
+
+- Des boxplots du nombre de jours jusqu’à floraison pour les différent génotypes, séparés en fonction de la température, et colorés en fonction du traitement (fluctuation ou non):
+
+```{r}
+panelB <- ggplot(expt1, aes(genotype, days.to.bolt, fill = fluctuation)) +
+    geom_boxplot() +
+    facet_grid(. ~ temperature) +
+  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+```
+
+
+Nous pouvons maintenant utiliser la fonction `grid.arrange()` pour combiner les graphiques ensemble:
+
+
+```{r warning = FALSE}
+ggarrange(panelA, panelB, nrow=2, labels =c("A", "B"),heights = c(1.5, 2))
+```
+
+
+## Créer des graphiques avec des animations
+
+Si nous postons les graphiques en ligne, cela peut apporter un plus d'inclure une animation dans le graphique, à condition que cela apporte des informations supplémentaires. C'est possible avec le package `gganimate`!
+
+Tout d'abord, chargeons le package `gganimate`:
+
+
+```{r}
+library(gganimate)
+```
+
+Pour créer une animation, il faut utiliser la fonction `transition_states()` à notre graphique (avec un _+_)
+
+
+```{r warning=FALSE}
+ggplot(expt1, aes(rosette.leaf.num, days.to.bolt, colour = fluctuation)) +
+    geom_point()  +
+  transition_states(states = genotype, wrap = FALSE, transition_length = 1, state_length = 3) +
+  ease_aes('linear') +
+  labs(subtitle = "{closest_state}") 
+
+```
+
+L'animation peut ensuite être sauvée en utilisant la fonction anim_save()
+
+
+## Interactivité
+
+Pour aller plus loin, il est même possible de créer des graphiques interactifs en utilisant le package  `plotly`.  
+
+
+```{r message=FALSE}
+library(plotly)
+```
+
+
+Il faut d'abord mettre le graphique dans un objet, puis utiliser cet objet dans la fonction `ggplotly()`.
+
+
+```{r go interactive, warning=FALSE}
+# Mettre le graphique dans l'objet p1
+p1 <- ggplot(expt1, aes(rosette.leaf.num, days.to.bolt, colour = fluctuation)) + 
+  geom_point() +
+  facet_wrap(~genotype)
+
+# Utiliser la fonction ggplotly pour faire un graphique intéractif
+ggplotly(p1)
+```
+
+
+Plutôt que d'avoir un graphique par génotype, il est possible d’ajouter un curseur pour montrer les données des génotypes de manière interaction en utilisant l'argument 'frame':
+
+
+```{r  warning=FALSE}
+# Mettre le graphique dans l'objet p1
+p2 <- ggplot(expt1, aes(rosette.leaf.num, days.to.bolt, colour = fluctuation, frame=genotype)) + 
+  geom_point() 
+
+# Utiliser la fonction ggplotly pour faire un graphique intéractif
+ggplotly(p2)
+```
 
 
 # Extras
