--- a/session2_ggplot/materiel/ggplot_exercise_solutions.Rmd
+++ b/session2_ggplot/materiel/ggplot_exercise_solutions.Rmd
@@ -35,7 +35,7 @@ ggplot(expt1, aes(genotype, rosette.leaf.num)) +
 
 ----------------------
 
->**Exercice 3:** Nous voulons étudier la relation entre le nombre de feuille de rosette et la longueur la limbe des feuilles (en mm) pour les genotypes. 
+>**Exercice 3:** Nous voulons étudier la relation entre le nombre de feuille de rosette et la longueur la limbe des feuilles (en mm) pour les génotypes. 
 >
 > Pour cela, dessinez un scatter plot (`geom_point()`) entre `blade.length.mm` et `rosette.leaf.num` en colorant les points en fonction de `genotype`. 
 >
@@ -57,7 +57,7 @@ ggplot(expt1, aes(blade.length.mm, rosette.leaf.num, colour = days.to.bolt)) +
 
 ---------------------
 
->**Exercice 4:** Les couleurs n'apportent plus d'information supplementaire. Pensez à une utilisation plus interessante des couleurs dans ce graphque. 
+>**Exercice 4:** Les couleurs n'apportent plus d'information supplémentaire. Pensez à une utilisation plus intéressante des couleurs dans ce graphique. 
 
 ```{r}
 ggplot(expt1, aes(blade.length.mm, rosette.leaf.num, colour = fluctuation)) +
@@ -68,7 +68,7 @@ ggplot(expt1, aes(blade.length.mm, rosette.leaf.num, colour = fluctuation)) +
 
 ------------------------
 
->**Exercice 5:** Modifiez le graphiqe précédent afin de séparer les données (facet) en fonction de `fluctuation` en ligne, et `day.length` en colonne et de colorer les points en fonction du génotype.
+>**Exercice 5:** Modifiez le graphique précédent afin de séparer les données (facet) en fonction de `fluctuation` en ligne, et `day.length` en colonne et de colorer les points en fonction du génotype.
 
 ```{r}
 ggplot(expt1, aes(blade.length.mm, rosette.leaf.num, colour = genotype)) +
