--- a/session4_reorganisation_suite/materiel/reorganisation_suite.Rmd
+++ b/session4_reorganisation_suite/materiel/reorganisation_suite.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Réorganisation des données avancée"
+title: "Réorganisation des données - suite"
 output:
   html_document:
     toc: yes
@@ -12,7 +12,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-[Retour à la page d'accueil](https://scortijo.github.io/2021_L3_R/)
+[Retour à la page d'accueil](https://scortijo.github.io/2022_L3_R/)
 
 <br>
 
@@ -22,16 +22,17 @@ Ces changement sont parfois nécessaire pour mettre les données dans le format 
 
 Aujourd’hui nous allons voir comment:
 
-1. Ajouter ou modifier des colonnes
+1. Combiner une filtration de lignes avec un graphique
 
-2. Reformater des données 
+2. Ajouter ou modifier des colonnes
 
-3. Ordonner un tableau en utilisant les valeurs d'une colonne 
+3. Concaténer ou séparer des colonnes
 
-4. Combiner plusieurs tableaux en un seul
 
 
 <br>
+
+# Mise en place
 
 Tout d'abord, créez un nouveau _script R_ et préparez votre environnement de travail:
 
@@ -59,7 +60,78 @@ expt1 <- read_tsv("../data/burghardt_et_al_2015_expt1.txt")
 
 <br>
 
-## Modifier ou ajouter des colonnes avec `mutate()`
+
+# Combiner des sélections de lignes avec un graphique
+
+Afin de pouvoir combiner la sélection de données avec un graphique, nous devons d'abord apprendre à faire des chaines de commandes.
+
+## Créer des chaînes de commandes avec les pipes `%>%`  
+
+Les "pipes" (`%>%`) permettent de faire une séquence d'opération sur des données, sans avoir besoin de créer des objets intermédiaires (ou de faire des commandes imbriquées très compliquées)
+
+
+Imaginons que nous voulions faire les sélections suivantes sur notre table:
+
+- Filtrer des données pour ne garder que les plantes qui ont été vernalisées
+
+- Ne garder que deux colonnes: le génotype et la taille totale des feuilles
+
+
+Grace au symbole `%>%` pipe, nous pouvons créer une chaîne de commandes. Pour cela nous devons d'abord faire une commande et ajouter `%>%` à la fin de la ligne qui va utiliser le résultat de cette commande comme input pour la fonction à la ligne suivante. 
+Voici comment faire:
+
+
+```{r}
+expt1 %>% 
+  filter(vernalization == "V") %>% 
+  select(genotype, total.leaf.length.mm)
+```
+
+
+> **Exercice 3:**
+> Utilisez `%>%` pour faire la suite de sélections suivantes sur`expt1`:
+>
+> - Gardez les plantes qui _ne sont pas_ du background Ler, et qui ont été traitées avec la température fluctuante. 
+> - Ne gardez que les colonnes qui contiennent le génotype, la longueur de "blade" et des information sur le "bolting" (aide: utilisez `contains()`)
+
+
+
+## Combiner avec un graphique 
+
+Avec le pipe nous pouvons aussi utiliser l'output d'une commande (ou d'une chaîne de commandes) comme un input pour `ggplot` afin de faire un graphique sur les données sélectionnées.
+Ceci est très utile lors de la phase d'exploration des données (sans avoir à créer de nouveaux objets avec en permanence `<-`).
+
+Nous pouvons par exemple faire un box plot pour le temps de floraison en fonction de la fluctuation de température, mais celle fois uniquement pour les plantes qui ont été vernalisées:
+
+
+```{r, warning=FALSE}
+expt1 %>% 
+  filter(vernalization == "V") %>% 
+  ggplot(aes(fluctuation, days.to.flower)) + 
+  geom_boxplot()
+```
+
+> **Exercice 4:**
+> Faite un violon plot du temps de floraison pour les différents génotypes, mais uniquement pour les plantes ayant poussées en jours court (8h de lumière).
+>
+> Aide: Utilisez `filter()` pour sélectionner les données et ensuite un pipe (`%>%`) pour utiliser l'output pour le graphique.
+>
+>
+
+
+> **BONUS**
+>
+> Représentez, uniquement pour les plantes qui contiennent le mot "Col" dans le background, et qui ont poussée à 22°C, un box plot de _days.to.bolt_ en fonction du _day.length_, coloré en fonction de la _fluctuation_. Séparez les graphiques pour avoir une facet par _génotype_. Utilisez un thème de type _theme_bw_.
+>
+>
+> Interprétez le résultat: Est-ce que le temps de floraison de certains génotypes est affecté par la fluctuation de température. Si oui lesquels?
+
+
+<br>
+
+
+
+# Modifier ou ajouter des colonnes avec `mutate()`
 
 La fonction `mutate()` permet d'ajouter de nouvelles variables (i.e. nouvelles colonnes) dans une table, ou de modifier des colonnes déjà existantes.
 
@@ -103,7 +175,7 @@ colnames(expt1.cm)
 <br>
 
 
-## Concaténer ou séparer des colonnes avec `unite()` et `separate()`
+# Concaténer ou séparer des colonnes avec `unite()` et `separate()`
 
 <br>
 
@@ -169,272 +241,6 @@ colnames(expt1.separated)
 <br>
 
 
-## Reformater des données avec `spread()` et `gather()`
-
-<br>
-
-### Passer au format large avec `spread()` 
-
-Parfois, le format de vos données ne vous permet pas de faire l'analyse ou le graphique que vous voulez.
-
-Par exemple, essayons de reproduire le graphique suivant extrait de [Burghard et al 2015](https://nph.onlinelibrary.wiley.com/doi/full/10.1111/nph.13799)
-
- ![](images/Burghard_2015_fig2_a.png)
-
-<br>
-
-Pour faire cette figure il nous faut une colonne avec le temps de floraison pour les plantes en conditions constante et une autre colonne avec le temps de floraison pour les plantes en condition variable. 
-Le temps de floraison pour toutes les plantes sont dans la même colonne dans notre tableau. Par contre, l'information sur le type de traitement (variable ou constant) est dans une autre colonne. Ce n'est pas ce que nous voulons! 
-Heureusement, nous pouvons utiliser la fonction `spread()` pour reformater notre tableau.
-
-
-Pour y voir plus clair, ne gardons que les colonnes qui vont nous être utiles à la création du tableau:
-
-
-
-```{r}
-
-expt1_subset <- select(expt1, plant_nb:vernalization, days.to.bolt)
-
-
-```
-
-Maintenant nous devons changer la structure de la table pour avoir une colonne avec le temps de floraison pour les plantes en conditions constante et une autre colonne avec le temps de floraison pour les plantes en condition variable. Un peu comme dans le schéma ci-dessous (pour aller du format "long" au format "wide").
-
-![](http://www.datacarpentry.org/R-ecology-lesson/img/spread_data_R.png)
-
-<br>
-
-La fonction `spread()` a besoin de deux informations:
-
-- Le nom de la colonne qui va permettre de créer les noms de colonnes dans la nouvelle table. Dans notre cas `fluctuation`
-
-- Le nom de la colonne qui contient les valeurs qui vont remplir les nouvelles colonnes. Dans notre cas `days.to.bolt`
-
-
-
-Voici comment restructurer notre tableau avec `spread()`:
-
-
-```{r}
-
-expt1_wide <- spread(expt1_subset, key=fluctuation, value = days.to.bolt)
-
-
-```
-
-Afin de pouvoir reproduire les couleurs du graphique, nous devons concaténer les colonnes `temperature` et `day.length`.
-Et nous pouvons enfin faire le graphique:
-
-
-```{r}
-
-unite(expt1_wide, "treatment", temperature, day.length) %>% 
-ggplot(aes(x=Con, y=Var, col=treatment, shape=treatment)) +
-  geom_point()
-
-
-```
-
-Comme vous avez vu, changer la structure du tableau nous a permis de faire un graphique que nous n'aurions pas pu faire autrement. Cela peut aussi permettre de faire des analyses supplémentaires.
-
-<br>
-
-<br>
-
-<br>
-
-### Passer au format long avec `gather()` 
-
-<br>
-
-Imaginons que nous souhaitons faire un boxplot pour le `days.to.bolt` et le `days.to.flower`. 
-
-
-```{r,  eval = TRUE,message=FALSE, echo=FALSE, warning=FALSE}
-gather(expt1, "trait", "time.in.days", days.to.bolt, days.to.flower) %>% 
-  ggplot(aes(x=trait, y=time.in.days, color=genotype)) +
-  geom_boxplot()
-```
-
-<br>
-
-Pour faire ce boxplor il nous faut réorganiser le tableau pour avoir les données pour ces deux mesures dans la même colonnes (`trait`) et une colonne indiquant s'il s'agit de la mesure de `days.to.bolt` ou `days.to.flower` (`time.in.days`). 
-
-<br>
-
-Pour cela nous utilisons la fonction `gather()` qui permet de passer d'un format "wide" à un format "long".
-![](http://www.datacarpentry.org/R-ecology-lesson/img/gather_data_R.png)
-
-<br>
-
-Dans ce cas, le nom des colonnes sélectionnées devient la "clé", c'est à dire les catégories dans la première colonne crée (en violet dans l'illustration). Et les valeurs de toutes ces colonnes sélectionnées vont remplir la deuxième colonne crée (en bleu dans l'illustration).
-
-<br>
-
-
-`gather()` à besoin de trois informations:  
-
-- le nom de la nouvelle colonne contenant les nom des vieilles colonnes (dans notre cas
-`trait`)
-
-- le nom de la nouvelle colonne contenant les valeurs des anciennes colonnes (dans notre cas `time.in.days`) 
-
-- le nom des anciennes colonnes que l'ont veut rassembler 
-
-Voici comment restructurer notre tableau avec `gather()`:
-
-```{r}
-expt1_long <- gather(expt1, "trait", "time.in.days", days.to.bolt, days.to.flower)
-```
-
-Nous pouvons maintenant faire notre boxplot
-
-
-```{r}
-ggplot(expt1_long, aes(x=trait, y=time.in.days, color=genotype)) +
-  geom_boxplot()
-```
-
-<br>
-
-Afin d'exporter ce graphique et de le sauver, nous utilisons la fonction `ggsave()`:
-
-
-```{r}
-ggplot(expt1_long, aes(x=trait, y=time.in.days, color=genotype)) +
-  geom_boxplot()
-
-ggsave("boxplot_daystobolt_daystoflower_genotypes.jpg")
-```
-
-<br>
-
-> **Exercice 3:** 
-> 
-> 1. Utilisez la fonction `gather()` pour restructurer le tableau afin de faire un boxplot de `blade.length.mm` et `total.leaf.length.mm`, coloré par  `fluctuation`.
-
-> 2. Ajoutez aux boxplots des encoches indiquant l'étendue de l'intervalle de confiance à 95% de la médiane (voir l'option `notch` dans `geom_boxplot`). Si les encoches sont étroite, il y a peu d'incertitude sur la médiane, si les encoches sont large, il y a une forte incertitude sur la médiane. Si les encoches de boxplots que nous comparons se chevauchent, alors nous ne pouvons pas conclure à une différence de médiane entre les médiane des deux groupes.  
-
-> 3. Interprétez le graphique: Y a t'il un effet de la fluctuation de température sur la longueur de blade ou de la feuille? Pourquoi?
-
->
-> **BONUS**
-> Optimisez le graphique obtenu en jouant sur le thème, les couleurs utilisée (visibles par des daltoniens), le titre et la valeur des axes et de la légende, de manière à avoir un graphique similaire au graphique suivant:
-
-
-
-```{r,  eval = TRUE,message=FALSE, echo=FALSE, warning=FALSE}
-
-gather(expt1, "trait", "length.mm", blade.length.mm, total.leaf.length.mm) %>% 
-  ggplot(aes(x=trait, y=length.mm, fill=fluctuation)) +
-  geom_boxplot(notch=TRUE) +
-  scale_fill_brewer(palette = "Set2", labels = c("Con"="Constant", "Var"="Variable"), 
-                    name="Fluctuation type") +
-  theme_bw() +
-  scale_x_discrete(name="",labels=c("blade.length.mm"="Blade","total.leaf.length.mm"="Total leaf")) +
-  ylab("Length (mm)")
-
-
-```
-
-<br>
-
-## Ordonner un tableau en utilisant les valeurs d'une colonne 
-
-
-Parfois, nous voulons ordonner nos données en fonction des valeurs d'une colonne.
-
-Pour cela, nous pouvons utiliser la fonction `arrange()`: 
-
-
-```{r}
-
-arrange(expt1, days.to.flower)
-
-
-```
-
-
-Par défaut, les valeurs sont ordonnées de la plus basse à la plus haute.
-
-Pour ordonner les valeurs de la plus haute à la plus basse, nous devons le spécifier en utilisant `desc()`:
-
-
-```{r}
-
-arrange(expt1, desc(days.to.flower))
-
-```
-
-
-<br>
-
-
-## Combiner plusieurs tableaux en un (`*_join()`)
-
-Quand nous analysons des données, il n'est pas rare que nous ayons plusieurs tableaux contenant des informations de différents types mais qui sont liées les unes aux autres. Afin de répondre à certaines questions, nous devons parfois combiner ces différents tableau en un seul, à l'aide d'une certaine colonne. 
-
-Pour cela nous pouvons utiliser une des fonction de la famille `*_join`.
-
-Toutes ces fonctions ont besoin de trois choses:
-- Le nom du premier tableau (celui de gauche)
-- Le nom du second tableau (celui de droite)
-- Le nom de la colonne qui est utilisée pour combiner les tableaux ensemble (il est aussi possible d'utiliser plus d'une colonne)
-
-Afin de comprendre comment ces fonctions marchent, nous allons utiliser deux jeux de données qui sont déjà présent dans R:
-
-- `band_members` 
-```{r}
-band_members
-```
-- `band_instruments`
-```{r}
-band_instruments
-```
-
-
-La fonction `full_join()`, permet de garder toutes les lignes et toutes les colonnes des deux tableaux dans le nouveau tableau créé en les combinant. Dans notre cas, pour avoir toutes les information sur le groupe de musique et l'instrument pour chaque musicien, nous utilisons:
-
-
-```{r full_join2}
-full_join(band_members, band_instruments, by="name")
-```
-
-Vous pouvez voir que quand le groupe de musique ou l'instrument d'un musicien est manquante, un 'NA' est utilisé à la place.
-
-
-Regardons les autres fonctions de la famille `*_join()`
-
-
-- Pour garder les données uniquement pour les musiciens présents dans ``band_members`` (table de gauche dans la fonction), nous utilisons `left_join()`:
-
-
-```{r}
-left_join(band_members, band_instruments, by="name")
-```
-
-- Pour garder les données uniquement pour les musiciens présents dans ``band_instruments`` (table de droite dans la fonction), nous utilisons `right_join()`:
-
-```{r}
-right_join(band_instruments, band_members, by="name")
-```
-
-- Pour garder uniquement les musiciens qui sont les deux tableaux, nous utilisons `inner_join()`:
-
-```{r}
-inner_join(band_members, band_instruments, by="name")
-```
-Dans ce cas il n'y a pas de 'NA'
-
-
-Ces fonctions peuvent être utiles pour comparer de gros jeux de données :
-
-- `inner_join()` est l'équivalent de _l'intersection_ entre deux jeux de données.
-
-- `full_join()` est l'équivalent de  _l'union_ de deux jeux de données.
-
-
 <br>
 
 ## Ressources et liens utiles:
@@ -463,7 +269,7 @@ A partir ce ce que nous avons vu aujourd'hui:
 
 
 
-[Retour à la page d'accueil](https://scortijo.github.io/2021_L3_R/)
+[Retour à la page d'accueil](https://scortijo.github.io/2022_L3_R/)
 
 
 
